--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TheBill-backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql7.freesqldatabase.com:3306/sql7727431
-spring.datasource.username=sql7727431
-spring.datasource.password=pSA3UMF9F9
+spring.datasource.url=jdbc:mysql://sql7.freesqldatabase.com:3306/sql7728275
+spring.datasource.username=sql7728275
+spring.datasource.password=a7YDk8VNSq
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
