Konteneryzacja i zmiana na postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=TheBill-backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/thebill
-spring.datasource.username=root
-spring.datasource.password=thebill
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://dpg-cs4hnmrtq21c73fttda0-a.frankfurt-postgres.render.com/thebill
+spring.datasource.username=thebill_user
+spring.datasource.password=NUHBRqqyysfPJYrUfyZC0I4Bx2vQb1jg
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
